[package]
name = "ch32v103_hal"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version = "0.2.7", features = ["unproven"]}
nb = "1.0.0"

[dependencies.ch32v1]
version = "0.1.6"
features = ["ch32v103", "critical-section"]
