[package]
name = "ch32v103_hal_i2c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# provide implementation for critical-section
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
nb = "1.0.0"
# Required for bwrite_all
embedded-hal = "0.2.7"

[dependencies.ch32v1]
# path = "../ch32-rs/ch32v1"
version = "0.1.6"
features = [
    "ch32v103",
    "critical-section", # without this, Peripherals::take() fails.
]

[dependencies.ch32v103_hal]
path = "../.."

[profile.release]
# Minimize binary size.
lto = true # link time optimizations; 836
opt-level = "s" # binary size optimization; z: 880, s: 1072
# lto and opt-level=z make 640
# lto and opt-level=s make 636
