[package]
name = "ch32v103_hal_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# provide implementation for critical-section
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
panic-halt = "0.2.0"

[dependencies.ch32v1]
# path = "../ch32-rs/ch32v1"
version = "0.1.5"
features = [
    "ch32v103",
    "critical-section", # without this, Peripherals::take() fails.
]

[dependencies.ch32v103_hal]
path = "../.."

[profile.release]
# Minimize binary size.
lto = true
opt-level = "s"
